Stabilize HTTP/2 connection lifecycle: native PING, subtractive jitter, Java 8 compat
- Switch PING keepalive from custom ChannelHandler to reactor-netty native
  pingAckTimeout/pingAckDropThreshold (available since 1.2.12). Simplifies
  code and enables dead connection detection for half-open TCP.
- Fix jitter direction: subtract from base lifetime (effective [29:30, 30:00])
  to match reactor-netty 1.3.4 maxLifeTimeVariance semantics. maxLifeTime is
  now the upper bound, never exceeded.
- Replace Http2PingHealthHandler with HttpConnectionLifecycleUtil (utility
  class for channel attributes and connection expiry stamping).
- Fix Set.copyOf() -> Collections.unmodifiableSet() for Java 8 compatibility.
- Update spec: rate limiter rationale, native PING design, .NET parity table.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>