@@ -15,6 +15,8 @@ import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.UnknownHostException;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -73,7 +75,7 @@ public class FilterableDnsResolverGroup extends AddressResolverGroup<InetSocketA
      * Returns the current set of blocked IPs (snapshot).
      */
     public Set<InetAddress> getBlockedIps() {
-        return Set.copyOf(blockedIps);
+        return Collections.unmodifiableSet(new HashSet<>(blockedIps));
     }
 
     @Override
